# esp-rust-nix-sandbox

./: .gitignore  README.md  flake.nix
embassy_hello_world/: Cargo.toml
embassy_hello_world/.cargo/: config.toml
embassy_hello_world/src/: main.rs
nix/: devshell.nix  help.nix  safe-bwrap.nix  unsafe-bin.nix
