[package]
name = "embassy-hello-world"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.4.0"
esp-hal = { version = "1.0.0", features = ["log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "log-04"] }
esp-println = { version = "0.16.0", features = ["log-04"] }

[features]
esp32 = [
  "esp-backtrace/esp32",
  "esp-bootloader-esp-idf/esp32",
  "esp-rtos/esp32",
  "esp-hal/esp32",
]
esp32c2 = [
  "esp-backtrace/esp32c2",
  "esp-bootloader-esp-idf/esp32c2",
  "esp-rtos/esp32c2",
  "esp-hal/esp32c2",
]
esp32c3 = [
  "esp-backtrace/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
  "esp-rtos/esp32c3",
  "esp-hal/esp32c3",
]
esp32c6 = [
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-rtos/esp32c6",
  "esp-hal/esp32c6",
]
esp32h2 = [
  "esp-backtrace/esp32h2",
  "esp-bootloader-esp-idf/esp32h2",
  "esp-rtos/esp32h2",
  "esp-hal/esp32h2",
]
esp32s2 = [
  "esp-backtrace/esp32s2",
  "esp-bootloader-esp-idf/esp32s2",
  "esp-rtos/esp32s2",
  "esp-hal/esp32s2",
]
esp32s3 = [
  "esp-backtrace/esp32s3",
  "esp-bootloader-esp-idf/esp32s3",
  "esp-rtos/esp32s3",
  "esp-hal/esp32s3",
]

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1
